--- a/main.html
+++ b/main.html
@@ -7,10 +7,36 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<table border=1px>
+	<thead>
+	<tr>
+		<th>Roll Numbers</th>
+		<th>Names</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr>
+		<td>1</td>
+		<td>Rose</td>
+	</tr>
+	<tr>
+		<td>2</td>
+		<td>Riya</td>
+	</tr>
+	</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="logo" height=120px width=200px>
+		</li><br>
+		<li>
+			<video src= "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" height=100px controls>
+			</video>
+		</li><br>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		</li>
 </body>
 
 </html>
