--- a/main.html
+++ b/main.html
@@ -31,11 +31,10 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="logo" height=120px width=200px>
 		</li><br>
 		<li>
-			<video src= "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" height=100px controls>
-			</video>
+			<video src= "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" height=100px controls type="video/mp4"></video>
 		</li><br>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls type="audio/ogg"></audio>
 		</li>
 	</ol>
 </body>
