--- a/main.html
+++ b/main.html
@@ -7,36 +7,46 @@
 </head>
 
 <body>
-	<table border=1px>
-	<thead>
-	<tr>
-		<th>Roll Numbers</th>
-		<th>Names</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr>
-		<td>1</td>
-		<td>Rose</td>
-	</tr>
-	<tr>
-		<td>2</td>
-		<td>Riya</td>
-	</tr>
+	<table border="1">
+		<thead>
+		    <tr>
+		        <th>Roll numbers</th>
+		        <th>Names</th>
+		    </tr>
+		<thead>
+		<tbody>
+		    <tr>        
+		        <td>1</td>
+		        <td>Mayank</td>		       
+		   </tr>
+		   <tr>        
+		        <td>2</td>
+		        <td>Hari</td>		        
+		    </tr>
+		    <tr>       
+		        <td>3</td>
+		        <td>Ram</td>		        
+		    </tr>
 	</tbody>
-	</table>
+</table>
 	<h1>List of medias</h1>
 	<ol>
 		<li>
-			<img src="https://picsum.photos/id/123/200/300" alt="logo" height=120px width=200px>
-		</li><br>
-		<li>
-			<video src= "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" height=100px controls type="video/mp4"></video>
-		</li><br>
-		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls type="audio/ogg"></audio>
+			<img src="https://picsum.photos/id/123/200/300" alt="logo" >
 		</li>
-	</ol>
+		<li>
+			<video width="700" height="400" controls>
+	            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+	            your brouser doesn't support this formate <!-- if video formate is not working -->
+	        </video>
+		</li>
+		<li>
+			  <!-- normal consol -->
+            <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
+			</audio>
+		
+ 
+</body>
 </body>
 
 </html>
