--- a/main.html
+++ b/main.html
@@ -17,16 +17,13 @@
 		<tbody>
 		    <tr>        
 		        <td>1</td>
-		        <td>Mayank</td>		       
+		        <td>Rose</td>		       
 		   </tr>
 		   <tr>        
 		        <td>2</td>
-		        <td>Hari</td>		        
+		        <td>Riya</td>		        
 		    </tr>
-		    <tr>       
-		        <td>3</td>
-		        <td>Ram</td>		        
-		    </tr>
+
 	</tbody>
 </table>
 	<h1>List of medias</h1>
